2005/01/25 23:34 (-0500) rwmcfa1

	* t/c.t: remove [] around test 12. caused failures on newer
	Test::More's

2005/01/09 23:50 (-0400) muppetman

	* Glib.pm, META.yml, NEWS, README: Unstable release 1.072

2005/01/09 23:08 (-0400) muppetman

	* Glib.xs: minor documentation updates

2005/01/09 16:29 (-0400) muppetman

	* Glib.exports: add gperl_format_variable_for_output, which needs to
	be exported but got missed somehow for 1.060.

2005/01/08 23:45 (-0400) muppetman

	* GMainLoop.xs, t/9.t: Ensure that asynchronous signals, deferred by
	perl's safe signal handling, are delivered on time when a main loop
	is running.  Thanks to Jan Hudec.

2005/01/04 15:15 (-0400) rwmcfa1

	* t/1.t: we need to make it clear to perl that g_get_user_data_dir and
	friends are functions or we'll get syntax errors and test failures when
	no symbols with those names are found (even though they'll be skipped.)

2005/01/02 16:31 (+0100) kaffeetisch

	* GParamSpec.xs, TODO: Remove documentation that doesn't apply
	anymore.

	* GUtils.xs, t/1.t: Bind and test g_get_user_data_dir,
	g_get_user_config_dir, g_get_user_cache_dir,
	g_get_system_data_dirs, g_get_system_config_dirs, and
	g_get_language_names.

2004/11/29 21:28 (+0100) kaffeetisch

	* Makefile.PL: Correct the unstable warning message to say 1.06x
	instead of 1.04x.

	* Glib.pm, META.yml, NEWS, README: Unstable release 1.071.

2004/11/01 21:22 (+0100) kaffeetisch

	* Glib.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.070.

2004/10/24 11:55 (-0400) rwmcfa1

	* MANIFEST.SKIP: updates

	* perl-Glib.spec.in: new scheme that addresses x86_64 problems
	found by Carl Nygard

2004/10/20 19:32 (+0200) kaffeetisch

	* GParamSpec.xs, e.t: Add and test support for GParamSpecUnichar.

2004/10/17 12:27 (+0200) kaffeetisch

	* doctypes: Add a description for gunichar.

2004/10/14 15:27 (-0400) muppetman

	* Makefile.PL: use PREREQ_PM in both WriteMakefile calls, so META.yml
	gets created properly.

2004/09/27 09:35 (-0400) muppetman
