@@ -1,3 +1,8 @@
+2005/01/29 01:38 (-0500) muppetman
+
+	* GBoxed.xs, GenPod.pm: implement support for the boxed type GStrv
+	as a native perl anonymous array of strings
+
 2005/01/25 23:34 (-0500) rwmcfa1
 
 	* t/c.t: remove [] around test 12. caused failures on newer
